# raft

./: .gitignore  .gitlab-ci.yml  .init.cfg  .init.wf  .nextflow.config  .raft.cfg  README.md  raft  raft.py  requirements.txt  setup.cfg
.script/: raft.py  raft_test.py
.singularity/: raft.recipe
src/: raft.py
src/raft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: raft_test.py  test_raft.py
tests/data/references/: test.fa
