[metadata]
name = raft
version = 0.9b
author = Steven P. Vensko II
author_email = steven.vensko@med.unc.edu
description = Reproducibile Analyses Framework and Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pirl-unc/raft
project_urls =
    Bug Tracker = https://github.com/pirl-unc/raft/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

scripts =
    src/raft.py

install_requires = 
    gitpython == 3.1.9


[options.packages.find]
where = src

